# powder_grinding_ros2

./: .gitignore  .gitmodules  BUILD-DOCKER-IMAGE.sh  CLAUDE.md  LAUNCH-TERMINATOR-TERMINAL.sh  README.md  RUN-DOCKER-CONTAINER.sh  RUN_DOCKER_CONTAINER.sh  Visual-ROS.md  requirements.txt  third_party.repos
docker/: BUILD-DOCKER-IMAGE.sh  Dockerfile  Dockerfile.txt  compose.yaml  docker-compose.yml
docker/with_nvidia/: Dockerfile  compose.yaml
env/: BUILD-DOCKER-IMAGE.sh  BUILD-LOCAL-ROS-ENV.sh  LAUNCH-TERMINATOR-TERMINAL.sh  RUN-DOCKER-CONTAINER.sh  requirements.txt
env/docker/: BUILD_ROS_WORKSPACE.sh  Dockerfile  INITIAL_SETUP_ROS_ENVIROMENTS.sh  README.md  README_jp.md  compose.yaml  install_packages.sh
env/terminator/: config
grinding_descriptions/src/: load_planing_scene.cpp
grinding_force_torque/: CMakeLists.txt  package.xml
grinding_force_torque/grinding_force_torque/: wrench_filter.py  wrench_statistics.py
grinding_force_torque/launch/: ft_filter.launch.py  wrench_filter.launch.py  wrench_filter_component.launch.py  wrench_statistics.launch.py
grinding_force_torque/scripts/: noisy_wrench_pub.py
grinding_force_torque/src/: wrench_converter_node.cpp  wrench_filter_node.cpp
grinding_ft_filter/:  ft_filter.py  CMakeLists.txt  package.xml
grinding_ft_filter/grinding_ft_filter/: ft_filter.py
grinding_ft_filter/grinding_ft_filter_pkg/: ft_filter.py  wrench_statistics.py
grinding_ft_filter/launch/: ft_filter.launch.py  ft_filter.launch.xml  wrench_statistics.launch.py
grinding_ft_filter/srv/: WrenchStatistics.srv
grinding_motion_routines/: CMakeLists.txt  package.xml  setup.py
grinding_motion_routines/config/: ik_params.yaml  motion_config.yaml
grinding_motion_routines/config/ur3e_grinding_demo/: motion_config.yaml  planning_scene_config.yaml
grinding_motion_routines/config/ur5e_grinding_demo/: motion_config.yaml  planning_scene_config.yaml
grinding_motion_routines/grinding_motion_routines/: JTC_helper.py  arm_position_controller.py  config.py  display_marker.py  display_tf.py  grinding_demo.py  grinding_motion_generator.py  grinding_motion_primitive.py  helpers.py  ik_test.py  marker_publisher.py  moveit_test.py  pose_publisher.py  test_marker.py  tf_publisher.py
grinding_motion_routines/launch/: grinding_demo.launch.py  grinding_motion_primitive_test.launch.py  motion_demo.launch.py  ur3e_grinding_demo.launch.py  ur5e_grinding_demo.launch.py
grinding_motion_routines/scripts/: JTC_helper.py  grinding_demo.py  test_display_marker.py  test_display_tf.py  test_marker.py  test_pose_publisher.py
grinding_motion_routines/src/: moveit_example_node.cpp
grinding_moveit_config/: CMakeLists.txt  package.xml
grinding_moveit_config/launch/: ur_moveit.launch.py
grinding_moveit_config/rviz/: view_robot.rviz
grinding_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
grinding_moveit_config_jazzy/: CMakeLists.txt  package.xml
grinding_moveit_config_jazzy/config/: moveit.rviz
grinding_moveit_config_jazzy/launch/: ur_moveit.launch.py
grinding_moveit_config_jazzy/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
grinding_robot_bringup/: CMakeLists.txt  README.md  package.xml
grinding_robot_bringup/launch/: ur5e_with_pestle_bringup.launch.py  ur5e_with_pestle_bringup.launch.xml  ur5e_with_pestle_bringup_jazzy.launch.py
grinding_robot_control/: CMakeLists.txt  package.xml
grinding_robot_control/config/: motion_config.yaml  ur5e.urdf
grinding_robot_control/grinding_robot_control/: JTC_helper.py  __init__.py  config.py  grinding_motion_primitive.py  ik_test.py  kdl_helper.py
grinding_robot_control/launch/: jtc_helper.launch.py
grinding_robot_control/scripts/: ik_test.py  test_ik.py  test_pinocchio.py  test_trac_ik.py
grinding_robot_control/src/: dynamic_tf_broadcaster_node.cpp  static_tf_broadcaster_node.cpp
grinding_robot_description/: CMakeLists.txt
grinding_robot_description/launch/: view_ur5e_with_pestle.launch.py
grinding_robot_description/rviz/: ur5e.rviz
grinding_robot_description/urdf/: ur5e_with_pestle.urdf copy.xacro  ur5e_with_pestle.urdf.xacro  ur5e_with_pestle_jazzzy.urdf.xacro
grinding_scene_description/: CMakeLists.txt  package.xml
grinding_scene_description/config/: planning_scene_config.yaml
grinding_scene_description/launch/: load_planning_scene.launch.py  load_planning_scene.launch.xml
grinding_scene_description/meshes/: asone_agate_mortar_80x100x36.stl  pestle_jig.stl
grinding_scene_description/src/: load_planning_scene.cpp  (+1 more)
onolab_ws/: BUILD_ROS_WORKSPACE.sh  INITIAL_SETUP_ROS_ENVIROMENTS.sh  build_ros_ws.sh
onolab_ws/src/grinding_descriptions/: CMakeLists.txt  package.xml
onolab_ws/src/grinding_descriptions/config/: planning_scene_config.yaml
onolab_ws/src/grinding_descriptions/launch/: load_planing_scene.launch.py
onolab_ws/src/grinding_descriptions/src/: load_planing_scene.cpp
onolab_ws/src/grinding_scene_description/: CMakeLists.txt  package.xml
onolab_ws/src/grinding_scene_description/include/grinding_scene_description/: load_planning_scene.hpp
onolab_ws/src/grinding_scene_description/launch/: load_planing_scene.launch.py  load_planning_scene.launch.py  load_planning_scene.launch.xml
onolab_ws/src/grinding_scene_description/meshes/: kido_agate_mortar_50x60x20.stl
onolab_ws/src/grinding_scene_description/scripts/: load_planning_scene.py
onolab_ws/src/grinding_scene_description/src/: load_planing_scene.cpp  load_planning_scene.cpp  load_planning_scene.hpp  main.cpp  new_load_planning_scene.cpp  test_load_planning_scene.cpp
onolab_ws/src/ur_pykdl/: README.md  package.xml  setup.cfg  setup.py  ur_pykdl.humble.repos
onolab_ws/src/ur_pykdl/scripts/: display_urdf.py  ur_kinematics.py
onolab_ws/src/ur_pykdl/src/ur_kdl/: kdl_kinematics.py  kdl_parser.py
onolab_ws/src/ur_pykdl/src/ur_kdl/hrl_geom/: README.md  __init__.py
onolab_ws/src/ur_pykdl/src/ur_pykdl/: ur_pykdl.py
onolab_ws/src/ur_pykdl/ur_kdl/: kdl_kinematics.py
onolab_ws/src/ur_pykdl/ur_kdl/hrl_geom/: pose_converter.py  transformations.py
onolab_ws/src/ur_pykdl/ur_pykdl/: ur_pykdl.py
terminator/: config
(+60 files in other folders)
