<?xml version="1.0"?>
<package format="3">
  <name>grinding_force_torque</name>
  <version>0.1.0</version>
  <description>Filtered FT sensor output for robotic calibration (ROS2)</description>

  <maintainer email="misaki_mashimo@ap.eng.osaka-u.ac.jp">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rosidl_default_runtime</build_depend>
  <build_depend>rclcpp</build_depend> <!-- Added for C++ nodes -->
  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rclcpp_components</build_depend> <!-- Added for C++ components -->
  <build_depend>tf2_ros</build_depend> <!-- Added for WrenchConverter -->
  <build_depend>tf2_geometry_msgs</build_depend> <!-- Added for WrenchConverter -->
  
  <exec_depend>rclcpp</exec_depend> <!-- Added for C++ nodes -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <!-- libeigen3-dev is often a build-time dep for headers, runtime might not be needed unless shipping .so -->
  <exec_depend>rclcpp_components</exec_depend> <!-- Added for C++ components -->
  <exec_depend>tf2_ros</exec_depend> <!-- Added for WrenchConverter -->
  <exec_depend>tf2_geometry_msgs</exec_depend> <!-- Added for WrenchConverter -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components plugin="${prefix}/lib/libwrench_filter_component.so" />
    <rclcpp_components plugin="${prefix}/lib/libwrench_converter_component.so" />
  </export>

</package>